--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Barakahs — Studio</title>
+  <title>Barakahs — The #1 Exchanger + Dealer Team</title>
   <meta name="description" content="Barakahs — We build clean sites, manage Roblox groups, and handle money exchange." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Outfit:wght@600;800;900&family=Baloo+2:wght@600;700&display=swap" rel="stylesheet">
