--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
   </main>
 
   <footer>
-    <div class="foot"><div>© <span id="year"></span> Barakahs</div><div class="muted">Aqua × Sand energy</div></div>
+    <div class="foot"><div>© <span id="year"></span> Barakahs</div><div class="muted">Nasir was here!</div></div>
   </footer>
 
   <script>
